--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ input::placeholder {
 }
 
 footer {
-  padding-top: 1.5rem;
+  padding-left: 1.5rem;
   font-size: 0.7rem;
   line-height: 0.2rem;
   text-align: center;
